@@ -7,7 +7,6 @@ apport-gtk:
  - add gksudo wrapper for disabling apport, and checkbox to crash
    dialog
  - check delay of progress dialog when filing a bug
- - fetch cloakroom ticket number from HTTP headers
 
 kernel hook:
 
